--- a/frontend/Cargo.toml
+++ b/frontend/Cargo.toml
@@ -15,18 +15,11 @@ leptos = { version = "0.6", features = ["nightly"] }
 leptos_meta = { version = "0.6", features = ["nightly"] }
 leptos_actix = { version = "0.6", optional = true }
 leptos_router = { version = "0.6", features = ["nightly"] }
-wasm-bindgen = "0.2.92"
-thaw = { git = "https://github.com/thaw-ui/thaw", version = "0.4.2" }
-leptos-use = "0.10.4"
-leptos-struct-table = "0.9.1"
-icondata = "0.3.0"
-reqwest = { version = "0.11.25", default-features = false, features = ["json"] }
-serde = { version = "1.0.197", features = ["derive"] }
-strum = { version = "0.26.2", features = ["derive"] }
+wasm-bindgen = "=0.2.100"
 
 [features]
-csr = ["leptos/csr", "leptos_meta/csr", "leptos_router/csr", "thaw/csr"]
-hydrate = ["leptos/hydrate", "leptos_meta/hydrate", "leptos_router/hydrate", "thaw/hydrate"]
+csr = ["leptos/csr", "leptos_meta/csr", "leptos_router/csr"]
+hydrate = ["leptos/hydrate", "leptos_meta/hydrate", "leptos_router/hydrate"]
 ssr = [
   "dep:actix-files",
   "dep:actix-web",
@@ -34,7 +27,6 @@ ssr = [
   "leptos/ssr",
   "leptos_meta/ssr",
   "leptos_router/ssr",
-  "thaw/ssr"
 ]
 
 # Defines a size-optimized profile for the WASM bundle in release mode
